Fixed spacing and fonts

--- a/style.css
+++ b/style.css
@@ -13,11 +13,12 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 .cor-heading {
     text-align: center;
+    font-family: Arial, sans-serif;
 }
 
 .logo-container {
@@ -33,7 +34,8 @@ header {
 }
   
 .reg-number h4 span {
-        color: red;
+        color: rgb(166, 12, 12);
+        font-family: Arial, sans-serif;
 }
 
 main {
@@ -47,6 +49,7 @@ main {
         padding: 0.3rem;
         border: solid black;
         border-width: 1px 0;
+        font-family: Arial, sans-serif;
 }
 
 .general-information {
@@ -54,17 +57,20 @@ main {
     justify-content: space-evenly;
     align-items: center;
     padding: 5px;
+    font-family: Arial, sans-serif;
 }
 
 .information-container {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    font-family: Arial, sans-serif;
 }
 
 .gender-age {
     display: flex;
     gap: 2rem;
+    font-family: Arial, sans-serif;
 }
 
 .general-information-header2 {
@@ -73,14 +79,17 @@ main {
     border-bottom: solid black;
     border-top: solid black;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
+    font-family: Arial, sans-serif;
+    
 }
 
 .unit {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: Arial, sans-serif;
 }
 
 .unit div {
@@ -92,12 +101,14 @@ main {
     margin-top: 1rem;
     display: flex;
     justify-content: start;
+    font-family: Arial, sans-serif;
 }
 
 .subjects {
     margin-left: 2rem;
     display: flex;
     gap: 5rem;
+    font-family: Arial, sans-serif;
 }
 
   
@@ -105,6 +116,7 @@ main {
     margin-left: 4rem;
     display: flex;
     gap: 2rem;
+    font-family: Arial, sans-serif;
 }
   
 .credit {
@@ -112,21 +124,24 @@ main {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    font-family: Arial, sans-serif;
 }
   
   .section {
-  margin-left: 1.2rem;
+  margin-left: 2rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  font-family: Arial, sans-serif;
  }
 
 .schedule {
-    margin-left: 6rem;
+    margin-left: 8rem;
     margin-right: 1rem;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: .9rem;
+    font-family: Arial, sans-serif;
 }
 
 .faculty {
@@ -136,26 +151,31 @@ main {
     flex-direction: column;
     gap: 2rem;
     text-decoration: underline;
+    font-family: Arial, sans-serif;
 }
 
 .code {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    font-family: Arial, sans-serif;
+    margin-left: 1rem;
 }
 
 .title {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    margin-left: 2rem;
+    margin-left: 1rem;
+    font-family: Arial, sans-serif;
 }
   
 .lec {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    margin-left: -.7rem;
+    margin-left: -2.5rem;
+    font-family: Arial, sans-serif;
 }
 
 .lab {
@@ -163,10 +183,12 @@ main {
     flex-direction: column;
     gap: 2rem;
     margin-left: -.7rem;
+    font-family: Arial, sans-serif;
 }
 .credit {
     display: flex;
     flex-direction: column;
     gap: 2rem;
     margin-left: -.7rem;
+    font-family: Arial, sans-serif;
 }
